--- a/templates/pages/.html
+++ b/templates/pages/.html
@@ -107,49 +107,21 @@
 </head>
 <body>
     <div class="summary">
-        <h1>LC2Eval Web Demo</h1>
-        <h3>Completion: August 2023</h3>
-        <p>In the summer of 2023, I served as an undergraduate research assistant to Yale's NLP Lab under PI Professor Arman Cohan. <br><br>As an academic collaborator, I was introduced to the field of Natural Language Processing, learning about techniques such as tokenization, few-shot/zero-shot learning and prompting. Additionally, I created presentations on important NLP research papers to build my understanding and familiarity with academic research papers. <br><br> The LC2Eval research project evaluated 54 existing models from 13 organizations on 7 different tasks. The web demo I created with a lab partner clearly visualized the results obtained from this study, using the Python Streamlit libray to implement web design techniques such as pagination, tabling, sorting and searching. <br><br> The Lab's full paper can be found <a href='https://arxiv.org/abs/2309.17446' target='_blank'> here</a>.</p>
+        <h1></h1>
+        <h3>Completion: Month Year</h3>
+        <p></p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #DC143C;">
-                Frontend
-            </span>
-            
-            <span class="tag" style="background-color: #306998;">
-                Python
-            </span>
-            
-            <span class="tag" style="background-color: #FD4145;">
-                Streamlit
+            <span class="tag" style="background-color: #BEE7FE;">
+                
             </span>
             
             <span class="tag" style="background-color: #BEE7FE;">
-                Webapp
-            </span>
-            
-            <span class="tag" style="background-color: #00FF00;">
-                Natural-Language-Processing
-            </span>
-            
-            <span class="tag" style="background-color: #BEE7FE;">
-                Data-visualization
-            </span>
-            
-            <span class="tag" style="background-color: #9370DB;">
-                Research
-            </span>
-            
-            <span class="tag" style="background-color: #4CAF50;">
-                Teamwork
-            </span>
-            
-            <span class="tag" style="background-color: #00356B;">
-                Yale
+                
             </span>
             
         </p>
-        <a href="index.html#LC2Eval Web Demo">
+        <a href="index.html#">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
