--- a/templates/pages/IBM.html
+++ b/templates/pages/IBM.html
@@ -107,54 +107,58 @@
 </head>
 <body>
     <div class="summary">
-        <h1>LC2Eval Web Demo</h1>
-        <h3>Completion: August 2023</h3>
-        <p>In the summer of 2023, I served as an undergraduate research assistant to Yale's NLP Lab under PI Professor Arman Cohan. <br><br>As an academic collaborator, I was introduced to the field of Natural Language Processing, learning about techniques such as tokenization, few-shot/zero-shot learning and prompting. Additionally, I created presentations on important NLP research papers to build my understanding and familiarity with academic research papers. <br><br> The LC2Eval research project evaluated 54 existing models from 13 organizations on 7 different tasks. The web demo I created with a lab partner clearly visualized the results obtained from this study, using the Python Streamlit libray to implement web design techniques such as pagination, tabling, sorting and searching. <br><br> The Lab's full paper can be found <a href='https://arxiv.org/abs/2309.17446' target='_blank'> here</a>.</p>
+        <h1>Accelerate Program Intern</h1>
+        <h3>Company: IBM</h3>
+        <h4>Duration: June 2022 - August 2022</h4>
+        <p>As an IBM Accelerate Program Intern on the Software Track, I was introduced to how software development is carried out at larger technology companies to industry standards. <br><br> With IBM guidance and mentorship, I developed front-end and back-end applications using version control, security programming frameworks and cloud native development. In collaborating and growing as a software engineer at IBM, I was able to hone my skills in JavaScript, React, Cybersecurity and Google Cloud Platform. <br><br> In addition to the program coursework, I independently learned about Cyber Security Fundamentals, earning a digit credential in offensive and defensive cybersecurity perspectives, risk management and ethical components of security.</p>
         <p>Tags: 
             
-            <span class="tag" style="background-color: #DC143C;">
-                Frontend
-            </span>
-            
-            <span class="tag" style="background-color: #306998;">
-                Python
-            </span>
-            
-            <span class="tag" style="background-color: #FD4145;">
-                Streamlit
+            <span class="tag" style="background-color: #BEE7FE;">
+                Cybersecurity
             </span>
             
             <span class="tag" style="background-color: #BEE7FE;">
-                Webapp
+                Agile
             </span>
             
-            <span class="tag" style="background-color: #00FF00;">
-                Natural-Language-Processing
+            <span class="tag" style="background-color: #66DAD7;">
+                Cloud
             </span>
             
-            <span class="tag" style="background-color: #BEE7FE;">
-                Data-visualization
+            <span class="tag" style="background-color: #F05032;">
+                Git
             </span>
             
-            <span class="tag" style="background-color: #9370DB;">
-                Research
+            <span class="tag" style="background-color: #E34F26;">
+                HTML
+            </span>
+            
+            <span class="tag" style="background-color: #2DA2D5;">
+                CSS
+            </span>
+            
+            <span class="tag" style="background-color: #F7D35B;">
+                JavaScript
+            </span>
+            
+            <span class="tag" style="background-color: #61DAFB;">
+                React
             </span>
             
             <span class="tag" style="background-color: #4CAF50;">
                 Teamwork
             </span>
             
-            <span class="tag" style="background-color: #00356B;">
-                Yale
+            <span class="tag" style="background-color: #1565F8;">
+                IBM
             </span>
             
         </p>
-        <a href="index.html#LC2Eval Web Demo">
+        <a href="index.html#IBM">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
 </body>
-
 
         </div>
 
