--- a/templates/pages/Yale.html
+++ b/templates/pages/Yale.html
@@ -107,9 +107,10 @@
 </head>
 <body>
     <div class="summary">
-        <h1>LC2Eval Web Demo</h1>
-        <h3>Completion: August 2023</h3>
-        <p>In the summer of 2023, I served as an undergraduate research assistant to Yale's NLP Lab under PI Professor Arman Cohan. <br><br>As an academic collaborator, I was introduced to the field of Natural Language Processing, learning about techniques such as tokenization, few-shot/zero-shot learning and prompting. Additionally, I created presentations on important NLP research papers to build my understanding and familiarity with academic research papers. <br><br> The LC2Eval research project evaluated 54 existing models from 13 organizations on 7 different tasks. The web demo I created with a lab partner clearly visualized the results obtained from this study, using the Python Streamlit libray to implement web design techniques such as pagination, tabling, sorting and searching. <br><br> The Lab's full paper can be found <a href='https://arxiv.org/abs/2309.17446' target='_blank'> here</a>.</p>
+        <h1>Yale University NLP Lab Undergraduate Research Assistant</h1>
+        <h3>Company: Yale</h3>
+        <h4>Duration: May 2023 - August 2023</h4>
+        <p>My time at the Yale NLP lab introduced me to the wonderful world of Natural Language Processing. <br><br> Here, I was able to collaborate with experienced researchers in the NLP field, allowing me to learn how to properly read, interpret and structure scientific research papers in Computer Science. This experience also bolstered my presentations skills, as I was able to summarize and present prominent papers on the frontier of NLP research to the lab each week. <br><br> My main task as a research assistant was to create a companion website for the lab's L2CEval Paper, which studied the performance of various Large Language Models on different lexical and semantic tasks. The website demo I created served as the predecessor to the current L2CEval website. This project taught me how to use Python's Streamlit library for web development and required me to analyze training and testing data from LLMs using HuggingFace.</p>
         <p>Tags: 
             
             <span class="tag" style="background-color: #DC143C;">
@@ -149,12 +150,11 @@
             </span>
             
         </p>
-        <a href="index.html#LC2Eval Web Demo">
+        <a href="index.html#Yale">
             <button type="button" class="btn btn-outline-info">Back to Home</button>
         </a>
     </div>
 </body>
-
 
         </div>
 
