--- a/templates/project.html
+++ b/templates/project.html
@@ -6,19 +6,25 @@
 
     
 {% block content %}
+<head>
+    <link rel="stylesheet" href="/christopher.github.io/static/css/project.css">
+</head>
 <body>
-    <h1>{{ project.title }}</h1>
-    <img src="{{ project.img }}" alt="{{ project.title }}">
-    <p>{{ project.description }}</p>
-    <p>Completion: {{ project.completion }}</p>
-    <p>Tags: 
-        {% for tag in project.tags %}
-        <span class="tag" style="background-color: {{ tag_colors[tag] }};">
-            {{ tag }}
-        </span>
-        {% endfor %}
-    </p>
-    <a href="index.html">Back to Home</a>
+    <div class="summary">
+        <h1>{{ project.title }}</h1>
+        <h3>Completion: {{ project.completion }}</h3>
+        <p>{{ project.description }}</p>
+        <p>Tags: 
+            {% for tag in project.tags %}
+            <span class="tag" style="background-color: {{ tag_colors[tag] }};">
+                {{ tag }}
+            </span>
+            {% endfor %}
+        </p>
+        <a href="index.html#{{project.title}}">
+            <button type="button" class="btn btn-outline-info">Back to Home</button>
+        </a>
+    </div>
 </body>
 
 {% endblock %}
